--- a/latex/rbffd_methods_content/rbf_table.tex
+++ b/latex/rbffd_methods_content/rbf_table.tex
@@ -11,6 +11,8 @@
    \rbf{Thin Plate Splines}{TPS}{$r^2 ln |r|$}{2} \\
    \rbf{Wendland ($C^2$)}{W2}{$(1-\varepsilon r)^4 (4\varepsilon r + 1)$}{0}
    \end{tabular}
-   \caption{Examples of frequently used RBFs based on \cite{Fornberg2008, Fasshauer2007}. $\varepsilon$ is the support parameter. For details on orders refer to Chapter~\ref{chap:rbf_pde} and \cite{Iske2004}. All RBFs have global support. For compact support, enforce a cut-off radius (see Equation~\ref{eqn:csrbf}).}
+   \caption{Examples of frequently used RBFs based on \cite{Fornberg2008, Fasshauer2007}. $\varepsilon$ is the support parameter. 
+   %For details on orders refer to Chapter~\ref{chap:rbf_pde} and \cite{Iske2004}. 
+   All RBFs have global support. For compact support, enforce a cut-off radius (see Equation~\ref{eqn:csrbf}).}
    \label{tbl:rbfs}
 \end{table}
