--- a/latex/rbffd_methods_content/rbftype_table.tex
+++ b/latex/rbffd_methods_content/rbftype_table.tex
@@ -38,7 +38,7 @@
 		\hline
 	\end{tabular}
 \end{center}
-\caption{Classification of references based on choice of RBF interpolation types and method for solving PDEs. References may appear in multiple cells according to the breadth of their research.}
+\caption{Classification of references based on choice of RBF interpolation types and method for solving PDEs. References may appear in multiple cells according to the breadth of their research. \authnote{TODO: add partition of unity}}
 \label{tbl:rbfcolloctypes}
 \end{table}
 %\end{sidewaystable}
