--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -51,8 +51,7 @@ Three collocation methods are presented: Kansa's method, Fasshauer's method and 
 
 In Radial Basis Function methods, radially symmetric functions provide a non-orthogonal basis used to interpolate between 
 nodes of a point cloud. RBFs are univariate and a function of distance from a center point defined in $\R^N$, so 
-they easily extend into higher dimensions without significant change in programming complexity. Commonly used RBFs from the literature are provided in Table~\ref{tbl:rbfs}; visuals of the same functions can be found in Figure~\ref{fig:rbf_examples}. \authnote{Include figure from poster: RBFs in higher dimensions (curve, bell, jaw-breaker)}.
-
+they easily extend into higher dimensions without significant change in programming complexity. Commonly used RBFs from the literature are provided in Table~\ref{tbl:rbfs}; visuals of the same functions can be found in Figure~\ref{fig:rbf_examples}. Figure~\ref{fig:rbf_dimension_example} illustrates the radial symmetry of RBFs in the first three dimensions. 
 
 \input{rbffd_methods_content/rbf_table}
 
