--- a/latex/rbffd_methods_content/rbf_examples.tex
+++ b/latex/rbffd_methods_content/rbf_examples.tex
@@ -18,5 +18,5 @@
 \includegraphics[width=0.35\textwidth]{matlab/ga_rbf3D.eps}
 \end{tabular} 
 \caption{The Gaussian (GA) RBF (Table~\ref{tbl:rbfs}) with parameter $\varepsilon=1$ in dimensions 1, 2 and 3.}
-\label{fig:rbf_examples}
+\label{fig:rbf_dimension_example}
 \end{figure} 
