Working with prospectus master

--- a/latex/rbffd_methods_content/rbf_examples.tex
+++ b/latex/rbffd_methods_content/rbf_examples.tex
@@ -17,6 +17,6 @@
 \includegraphics[width=0.3\textwidth]{matlab/ga_rbf2D.eps}
 \includegraphics[width=0.3\textwidth]{matlab/ga_rbf3D.eps}
 \end{tabular} 
-\caption{The Gaussian (GA) RBF (Table~\ref{tbl:rbfs}) with parameter $\varepsilon=1$ in dimensions 1, 2 and 3.}
+\caption{The Gaussian (GA) RBF (Table~\ref{tbl:rbfs}) with parameter $\varepsilon=1$ and $r$ in dimensions 1, 2 and 3.}
 \label{fig:rbf_dimension_example}
 \end{figure} 
