--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -36,10 +36,10 @@
 
 \chapter{RBF Methods for PDEs}
 
-The process of solving partial differential equations (PDEs) using radial basis functions (RBFs) dates back to 1990 \cite{Kansa1990a,Kansa1990b}. However, at the core of all RBF methods lies the fundamental problem of approximation/interpolation. Some methods (e.g., global- and compact-RBF methods) apply RBFs to approximate derivatives directly. Others (e.g., RBF-generated Finite Differences) leverage the basis functions indirectly by generating weights for finite-differencing stencils, used in turn to for derivatives. Regardless, to track the history of RBF methods, one must look back to 1971 and R.L. Hardy's seminal research on interpolation with multi-quadric basis functions \cite{Hardy1971}. 
+The process of solving partial differential equations (PDEs) using radial basis functions (RBFs) dates back to 1990 \cite{Kansa1990a,Kansa1990b}. However, at the core of all RBF methods lies the fundamental problem of approximation/interpolation. Some methods (e.g., global- and compact-RBF methods) apply RBFs to approximate derivatives directly. Others (e.g., RBF-generated Finite Differences) leverage the basis functions indirectly by generating weights for finite-differencing stencils, and use those in turn to appromimate derivatives. Regardless, to track the history of RBF methods, one must look back to 1971 and R.L. Hardy's seminal research on interpolation with multi-quadric basis functions \cite{Hardy1971}. 
 
 This chapter is dedicated to summarizing the four-decade history of RBF methods leading up to the development of the 
-RBF-generated Finite Differences (RBF-FD) method. Beginning with a brief introduction to RBFs and a historical survey, we attempt to classify related work into three three types: global, compact and local methods. Following this, the general approximation problem is introduced with a look at the core of all three method classificiations: RBF scattered-data interpolation. %We categorize existing methods for solving PDEs with RBFs as either global 
+RBF-generated Finite Differences (RBF-FD) method. Beginning with a brief introduction to RBFs and a historical survey, we attempt to classify related work into three three types: global, compact, and local methods. Following this, the general approximation problem is introduced, with a look at the core of all three method classificiations: RBF scattered-data interpolation. %We categorize existing methods for solving PDEs with RBFs as either global 
 %or local. Global methods use collocation and invert a single large linear system to find the interpolant that satisfies 
 %the differential equations at RBF centers. Local methods limit the influence of basis functions and seek an interpolant 
 %at each RBF center defined in terms of neighboring basis functions (local collocation) or nodal values (RBF-FD).
@@ -51,11 +51,14 @@ Three collocation methods are presented: Kansa's method, Fasshauer's method and 
 
 In Radial Basis Function methods, radially symmetric functions provide a non-orthogonal basis used to interpolate between 
 nodes of a point cloud. RBFs are univariate and a function of distance from a center point defined in $\R^N$, so 
-they easily extend into higher dimensions without significant change in programming complexity. Commonly used RBFs from the literature are provided in Table~\ref{tbl:rbfs}; visuals of the same functions can be found in Figure~\ref{fig:rbf_examples}. Figure~\ref{fig:rbf_dimension_example} illustrates the radial symmetry of RBFs in the first three dimensions. 
+they easily extend into higher dimensions without significant change in programming complexity. Commonly used RBFs from the literature are provided in Table~\ref{tbl:rbfs}; visuals of the same functions can be found in Figure~\ref{fig:rbf_examples}. Figure~\ref{fig:rbf_dimension_example} illustrates the radial symmetry of RBFs---in this case, a Gaussian RBF---in the first three dimensions. 
 
 \input{rbffd_methods_content/rbf_table}
 
 \input{rbffd_methods_content/rbf_examples}
+
+%TODO: benefits of RBF methods
+The RBF literature advertises many benefits. First, \authnote{more: dimension, scattered, other benefits}
 
 RBFs have been shown in 
 some cases to have exponential convergence for function approximation \cite{Fasshauer2007}. It is also possible to 
@@ -368,7 +371,7 @@ Returning to the PDE, we postpone the issue of  achieving polynomial precision i
 
 Now, since $u_{\Phi}(x)$ from Equation~\ref{eqn:pde_approx} cannot (in general) satisfy the PDE everywhere, we enforce the PDE at a set of collocation points, which are  distributed over both the interior and the boundary. Again, these points do not necessarily coincide with the RBF centers, but it is convenient for this to be true in practice. 
 
-\section{Reconstructing Solutions for PDEs}
+\subsection{Reconstructing Solutions for PDEs}
 In the next few sections, we will generate collocation equations based on this general form: 
 \begin{eqnarray}
 \diffop{u_\Phi(x)} &=& f(x) \on{\Interior} \label{eqn:colloc_interior}\\ 
