--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -34,6 +34,7 @@
 
 \part{Preliminaries}
 
+
 \chapter{RBF Methods for PDEs}
 
 The process of solving partial differential equations (PDEs) using radial basis functions (RBFs) dates back to 1990 \cite{Kansa1990a,Kansa1990b}. However, at the core of all RBF methods lies the fundamental problem of approximation/interpolation. Some methods (e.g., global- and compact-RBF methods) apply RBFs to approximate derivatives directly. Others (e.g., RBF-generated Finite Differences) leverage the basis functions indirectly by generating weights for finite-differencing stencils, and use those in turn to appromimate derivatives. Regardless, to track the history of RBF methods, one must look back to 1971 and R.L. Hardy's seminal research on interpolation with multi-quadric basis functions \cite{Hardy1971}. 
@@ -50,7 +51,7 @@ Three collocation methods are presented: Kansa's method, Fasshauer's method and 
 \section{General Problem}
 
 In Radial Basis Function methods, radially symmetric functions provide a non-orthogonal basis used to interpolate between 
-nodes of a point cloud. RBFs are univariate and a function of distance from a center point defined in $\R^N$, so 
+nodes of a point cloud. RBFs are univariate and a function of distance from a center point defined in $\R^D$, so 
 they easily extend into higher dimensions without significant change in programming complexity. Commonly used RBFs from the literature are provided in Table~\ref{tbl:rbfs}; visuals of the same functions can be found in Figure~\ref{fig:rbf_examples}. Figure~\ref{fig:rbf_dimension_example} illustrates the radial symmetry of RBFs---in this case, a Gaussian RBF---in the first three dimensions. 
 
 \input{rbffd_methods_content/rbf_table}
