--- a/latex/macros/aliases.tex
+++ b/latex/macros/aliases.tex
@@ -4,6 +4,7 @@
 \newcommand{\vv}{\mathbf{v}}
 \newcommand{\vu}{\mathbf{u}}
 \newcommand{\vx}{\mathbf{x}}
+\newcommand{\vw}{\mathbf{w}}
 \newcommand{\vy}{\mathbf{y}}
 \newcommand{\vz}{\mathbf{z}}
 \newcommand{\D}{\mathbf{D}}
