--- a/latex/rbffd_methods_content/rbftype_table.tex
+++ b/latex/rbffd_methods_content/rbftype_table.tex
@@ -20,6 +20,7 @@
 \newcommand{\rbffdlocalrbf}[0]{\cite{WrightFornberg06, Wright2003, Shu2003, Cecil2004, Wright2004, Shu2006, Chandhini2007}}
 
 
+%TODO: add partition of unity papers
 %\begin{sidewaystable}
 \begin{table}[t]
 \begin{center}
@@ -38,7 +39,7 @@
 		\hline
 	\end{tabular}
 \end{center}
-\caption{Classification of references based on choice of RBF interpolation types and method for solving PDEs. References may appear in multiple cells according to the breadth of their research. \authnote{TODO: add partition of unity}}
+\caption{Classification of references based on choice of RBF interpolation types and method for solving PDEs. References may appear in multiple cells according to the breadth of their research.}
 \label{tbl:rbfcolloctypes}
 \end{table}
 %\end{sidewaystable}
